--- a/index.html
+++ b/index.html
@@ -286,7 +286,24 @@
 
                     <div class="col-md-4 col-12">
                         <div class="card event-card">
-                            <img class="card-img-top" data-src="images/assets/events/30Days2021.png" alt="Unveil : 30 days of Google cloud ">
+                            <img class="card-img-top" data-src="/home/abhijeet/MIT/GDSC/GDSCmitaoe.github.io-master/GDSCmitaoe.github.io-master/images/assets/events/MIT's unite: open source edition.jpg" alt="MIT's unite: open source edition">
+                            <div class="card-body">
+                                <p class="tagging intermediate float-right">Beginner</p>
+                                <h5 class="card-title">MIT's Unite: Open Source Edition</h5>
+                                <p class="card-text">
+                                    <strong>DATE :</strong> 15<sup>th</sup> & 16<sup>th</sup>  OCT, 2021 <br>
+                                    <strong>VENUE :</strong> Online<br>
+                                    <strong>TIME :</strong> 06:00PM - 07:30PM
+                                </p>
+                                <br>
+                                <a href="https://gdsc.community.dev/events/details/developer-student-clubs-mit-academy-of-engineering-pune-presents-mits-unite-open-source-edition/" target="_blank" class="button float-right"> View Insights</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-12">
+                        <div class="card event-card">
+                            <img class="card-img-top" data-src="images/assets/events/30Days2021.png" alt="Unveil : 30 days of Google cloud">
                             <div class="card-body">
                                 <p class="tagging intermediate float-right">Beginner</p>
                                 <h5 class="card-title">Unveil : 30 days of Google cloud </h5>
@@ -301,6 +318,7 @@
                         </div>
                     </div>
 
+
                     <div class="col-md-4 col-12">
                         <div class="card event-card">
                             <img class="card-img-top" data-src="images/assets/events/InfoSession2021.png" alt="Info Session 2021">
@@ -312,27 +330,9 @@
                                     <strong>VENUE :</strong> Online<br>
                                     <strong>TIME :</strong> 03:00PM - 04:30PM
                                 </p>
-                                <br>
-                                <a href="https://bit.ly/infoSession2021" target="_blank" class="button float-right"> View Insights</a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-4 col-12">
-                        <div class="card event-card">
-                            <img class="card-img-top" data-src="images/assets/events/Flutter_Bootcamp1603.png" alt="Event poster">
-                            <div class="card-body">
-                                <p class="tagging intermediate float-right">Beginner</p>
-                                <h5 class="card-title">Flutter Bootcamp</h5>
-                                <p class="card-text">
-                                    <strong>DATE :</strong> 16<sup>th</sup> MAR, 2021 <br>
-                                    <strong>VENUE :</strong> Online<br>
-                                    <strong>TIME :</strong> 03:00PM - 04:30PM
-                                </p>
                                 <div style="margin-top: 45px;">
                                 </div>
-                                <a href="https://gdsc.community.dev/events/details/developer-student-clubs-mit-academy-of-engineering-presents-flutter-bootcamp-create-app-faster/" target="_blank" class="button float-right"> View Insights</a>
+                                <a href="https://bit.ly/infoSession2021" target="_blank" class="button float-right"> View Insights</a>
                             </div>
                         </div>
                     </div>
@@ -344,6 +344,33 @@
 
             <!--Past events-->
             <div class="tab-pane" id="past" role="tabpanel" aria-labelledby="past">
+
+                <section   class="section-spacer "> 
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-sm-5 ml-auto">
+                                <div class="feature-list-wrapper">
+                                    <div class="content-header">
+                                        <h2 class="content-title">Flutter Bootcamp
+                                        </h2>
+                                        <hr>
+                                        <h6>DATE : 16<sup>th</sup> March 2021</h6>
+                                        <h6>VENUE: Online</h6>
+                                    <p>
+                                        Flutter is an open-source UI software development kit 
+                                        <br>used to develop applications for Android, iOS, Windows, 
+                                        <br>Mac,Linux,Google Fuchsia and the web.
+                                    </p>
+                                    </div>
+                                    <a href="https://gdsc.community.dev/events/details/developer-student-clubs-mit-academy-of-engineering-presents-flutter-bootcamp-create-app-faster/" target="_blank" class="button float-right" class="past-event" target="_blank" rel="noopener">Event Insights&nbsp;&nbsp;<i class="fas fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <img class="card-img-top" data-src="/home/abhijeet/MIT/GDSC/GDSCmitaoe.github.io-master/GDSCmitaoe.github.io-master/images/assets/events/Flutter_Bootcamp1603.png" alt="Event poster">
+                                </div>
+                        </div>
+                    </div>
+                </section>
                 
                 <section   class="section-spacer "> 
                     <div class="container">
