image path update

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
                     <div class="col-md-4 col-12">
                         <div class="card event-card">
-                            <img class="card-img-top" data-src="/home/abhijeet/MIT/GDSC/GDSCmitaoe.github.io-master/GDSCmitaoe.github.io-master/images/assets/events/MIT's unite: open source edition.jpg" alt="MIT's unite: open source edition">
+                            <img class="card-img-top" data-src="images/assets/events/MIT's unite: open source edition.jpg" alt="MIT's unite: open source edition">
                             <div class="card-body">
                                 <p class="tagging intermediate float-right">Beginner</p>
                                 <h5 class="card-title">MIT's Unite: Open Source Edition</h5>
