Flutter Bootcamp path update

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <img class="card-img-top" data-src="/home/abhijeet/MIT/GDSC/GDSCmitaoe.github.io-master/GDSCmitaoe.github.io-master/images/assets/events/Flutter_Bootcamp1603.png" alt="Event poster">
+                                <img class="card-img-top" data-src="images/assets/events/Flutter_Bootcamp1603.png" alt="Event poster">
                                 </div>
                         </div>
                     </div>
