Fixed css for FF and added more info on a fellow dev

--- a/index.html
+++ b/index.html
@@ -1488,22 +1488,17 @@
                                         <!-- <p>DSC Lead</p> -->
                                         <br>
                                     </div>
-                                    <div class="desc">An AI enthusiast working hard to automate all tasks.</div>
+                                    <div class="desc">I'm an AI Engineer, not hesitant to automate your job and anything else I might find boring. Right now scripting 👨🏼‍💻 and implementing an idea to take away your web development job. 😉 </div>
                                 </div>
                                 <div class="bottom">
                                     <ul class="social-list__inline mt-10">
-                                        <li>
-                                            <a href="#" target="_blank" rel="noopener">
-                                                <i class="fab fa-twitter"></i>
-                                            </a>
-                                        </li>
                                         <li>
                                             <a href="https://www.instagram.com/_abhijeet_gandhi_/" target="_blank" rel="noopener">
                                                 <i class="fab fa-instagram"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="https://github.com/abhijeet1813" target="_blank" rel="noopener">
+                                            <a href="https://github.com/AbhijeetGandhi" target="_blank" rel="noopener">
                                                 <i class="fab fa-github"></i>
                                             </a>
                                         </li>
@@ -1515,11 +1510,6 @@
                                         <li>
                                             <a href="https://www.facebook.com/abhijeet.gandhi.98/" target="_blank" rel="noopener">
                                                 <i class="fab fa-facebook"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" target="_blank" rel="noopener">
-                                                <i class="fas fa-link"></i>
                                             </a>
                                         </li>
                                     </ul>
